# Mujoco

./: README.md
8dof_URDF/: CMakeLists.txt  package.xml
8dof_URDF/config/: joint_names_双轮足腿URDF.SLDASM.yaml
8dof_URDF/launch/: display.launch  gazebo.launch
8dof_URDF/meshes/: base_link.STL  left_hip_pitch_link.STL  left_knee_link.STL  left_wheel_link.STL  left_yaw_link.STL  right_hip_pitch_link.STL  right_knee_link.STL  right_wheel_link.STL  right_yaw_link.STL
8dof_URDF/mjcf/: robot.xml
8dof_URDF/urdf/: robot.urdf  双轮足腿URDF.SLDASM.csv  双轮足腿URDF.SLDASM.urdf
analysis/balance_results/: balance_report.md  balance_summary.csv  balance_timeseries.csv
analysis/disturbance_results/: disturbance_report.md  disturbance_summary.csv  disturbance_timeseries.csv
analysis/results/: dynamics_report.md  free_base_summary.csv  step_response_metrics.csv
analysis/standing_tuning/: standing_best_config.json  standing_tuning_report.md  standing_tuning_results.csv
analysis/walking_results/: walking_report.md  walking_summary.csv  walking_timeseries.csv
docs/: ONBOARDING.md
docs/superpowers/plans/: 2026-06-27-base-imu-sensor.md  2026-06-27-body-balance-control.md  2026-07-01-robust-standing-control.md  2026-07-02-disturbance-rejection-v1.md  (+1 more)
scripts/: analyze_balance.py  analyze_disturbance.py  analyze_dynamics.py  analyze_walking.py  balance_control.py  convert_urdf_to_mjcf.py  pd_control.py  run_balance_viewer.py  run_walking_viewer.py  tune_standing_balance.py  walking_control.py
tests/: test_balance_control.py  test_motor_control_dynamics.py  test_passive_mjcf.py
(+5 files in other folders)
